rust/nes/src/mapper/vrc7_audio/dsa_emu2413.rs

extern "C" {
    #[doc = " Set chip type. If vrc7 is selected, r#14 is ignored.\n This method not change the current ROM patch set.\n To change ROM patch set, use OPLL_resetPatch.\n @param type 0:YM2413 1:VRC7"]
    pub fn OPLL_setChipType(opll: *mut OPLL, type_: u8);
}
extern "C" {
    pub fn OPLL_writeIO(opll: *mut OPLL, reg: u32, val: u8);
}
extern "C" {
    pub fn OPLL_writeReg(opll: *mut OPLL, reg: u32, val: u8);
}
extern "C" {
    #[doc = " Calculate one sample"]
    pub fn OPLL_calc(opll: *mut OPLL) -> i16;
}
extern "C" {
    #[doc = " Calulate stereo sample"]
    pub fn OPLL_calcStereo(opll: *mut OPLL, out: *mut i32);
}
extern "C" {
    pub fn OPLL_setPatch(arg1: *mut OPLL, dump: *const u8);
}
extern "C" {
    pub fn OPLL_copyPatch(arg1: *mut OPLL, arg2: i32, arg3: *mut OPLL_PATCH);
}
extern "C" {
    #[doc = " Force to refresh.\n External program should call this function after updating patch parameters."]
    pub fn OPLL_forceRefresh(arg1: *mut OPLL);
}
extern "C" {
    pub fn OPLL_dumpToPatch(dump: *const u8, patch: *mut OPLL_PATCH);
}
extern "C" {
    pub fn OPLL_patchToDump(patch: *const OPLL_PATCH, dump: *mut u8);
}
extern "C" {
    pub fn OPLL_getDefaultPatch(type_: i32, num: i32, arg1: *mut OPLL_PATCH);
}
extern "C" {
    #[doc = "  Set channel mask\n  @param mask mask flag: OPLL_MASK_* can be used.\n  - bit 0..8: mask for ch 1 to 9 (OPLL_MASK_CH(i))\n  - bit 9: mask for Hi-Hat (OPLL_MASK_HH)\n  - bit 10: mask for Top-Cym (OPLL_MASK_CYM)\n  - bit 11: mask for Tom (OPLL_MASK_TOM)\n  - bit 12: mask for Snare Drum (OPLL_MASK_SD)\n  - bit 13: mask for Bass Drum (OPLL_MASK_BD)"]
    pub fn OPLL_setMask(arg1: *mut OPLL, mask: u32) -> u32;
}
extern "C" {
    #[doc = " Toggler channel mask flag"]
    pub fn OPLL_toggleMask(arg1: *mut OPLL, mask: u32) -> u32;
}
